# ib-practica12-oop-gtests-exercism-Evian-Concepcion

tarea12/complejos/: CMakeLists.txt
tarea12/complejos/src/: CMakeLists.txt  complejo_funcion.cc  complejo_funcion.h  complejo_main.cc  test.cc
tarea12/complejos/tests/: gtsts_main.cc  tests_complejo.cc
tarea12/fechas/: CMakeLists.txt
tarea12/fechas/src/: dates.txt  fechas_funcion.cc  fechas_funcion.h  fechas_main.cc  salida.txt
tarea12/fechas/tests/: gtests_main.cc  tests_fechas.cc
tarea12/tarea/: complejo_funcion.cc  complejo_funcion.h  complejo_main.cc
